--- a/node-red-i8c-cumulocity/package.json
+++ b/node-red-i8c-cumulocity/package.json
@@ -17,8 +17,18 @@
   },
   "node-red" : {
         "nodes": {
-			"cumulocity-tenant": "cumulocity_tenant/cumulocity_tenant.js",
-            "register-device": "register_device/register_device.js"
+			"config-cumulocity-tenant": "config_cumulocity_tenant/config_cumulocity_tenant.js",
+            "api-check-registration": "api_check_registration/api_check_registration.js",
+			"api-create-inventory": "api_create_inventory/api_create_inventory.js",
+			"api-update-inventory": "api_update_inventory/api_update_inventory.js",
+			"api-register-device": "api_register_device/api_register_device.js",
+			"api-get-credentials" : "api_get_credentials/api_get_credentials.js",
+			"api-create-child" : "api_create_child/api_create_child.js",
+			"api-reg-control-notif" : "api_reg_control_notif/api_reg_control_notif.js",
+			"api-get-control-op" : "api_get_control_op/api_get_control_op.js",
+			"api-put-control-op" : "api_put_control_op/api_put_control_op.js",
+			"base-reg-device": "base_reg_device/base_reg_device.js",
+			"base-reg-control": "base_reg_control/base_reg_control.js"
         }
     }
 }
