--- a/node-red-i8c-cumulocity/package.json
+++ b/node-red-i8c-cumulocity/package.json
@@ -27,6 +27,7 @@
 			"api-reg-control-notif" : "api_reg_control_notif/api_reg_control_notif.js",
 			"api-get-control-op" : "api_get_control_op/api_get_control_op.js",
 			"api-put-control-op" : "api_put_control_op/api_put_control_op.js",
+			"api-send-measure" : "api_send_measurement/api_send_measurement.js",
 			"base-reg-device": "base_reg_device/base_reg_device.js",
 			"base-reg-control": "base_reg_control/base_reg_control.js"
         }
