--- a/node-red-i8c-cumulocity/package.json
+++ b/node-red-i8c-cumulocity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-red-i8c-cumulocity",
+  "name": "node-red-contrib-i8c-cumulocity",
   "version": "1.0.0",
   "description": "node-red package for cumulocity by i8c",
   "main": "index.js",
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+	"node-red",
     "cumulocity",
     "i8c"
   ],
