--- a/node-red-i8c-cumulocity/package.json
+++ b/node-red-i8c-cumulocity/package.json
@@ -2,6 +2,7 @@
   "name": "node-red-contrib-i8c-cumulocity",
   "version": "1.0.0",
   "description": "node-red package for cumulocity by i8c",
+  "url": "https://github.com/I8C"
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
